examples/datalog/09_recursion/32_tree_depth.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_tree_depth
Knowledge graph 'test_tree_depth' created.
Switched to knowledge graph: test_tree_depth
> .kg use test_tree_depth
Switched to knowledge graph: test_tree_depth
> +parent[(2, 1), (3, 1), (4, 2), (5, 2), (6, 3)].
Inserted 5 fact(s) into 'parent'.
> +depth(Node, 0) :- parent(_, Node), !parent(Node, _).
Rule 'depth' registered.
> +depth(Child, D) :- parent(Child, Parent), depth(Parent, ParentD), D = ParentD + 1.
Script error: Failed to register rule: Unsafe rule 'depth': Head variable(s) D not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
