examples/datalog/09_recursion/32_tree_depth.dl
% Test: Tree depth calculation
% Expected: Compute depth in tree structure
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_tree_depth
.kg use test_tree_depth

+parent[(2, 1), (3, 1), (4, 2), (5, 2), (6, 3)].

% Roots have depth 0
+depth(Node, 0) :- parent(_, Node), !parent(Node, _).

% Children have parent's depth + 1
+depth(Child, D) :- parent(Child, Parent), depth(Parent, ParentD), D = ParentD + 1.

?- depth(Node, D).

.kg use default
.kg drop test_tree_depth
